adding system authentication system

--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,12 @@ FORCE_HTTPS=false             # Redirect HTTP to HTTPS (true/false)
 NODE_ENV=development          # Environment mode (development/production)
 CERT_DIR=                     # Custom certificate storage directory (optional)
 
+# Authentication Configuration
+ENABLE_AUTH=false             # Enable user authentication (true/false)
+AUTH_USERNAME=admin           # Username for authentication (when ENABLE_AUTH=true)
+AUTH_PASSWORD=admin           # Password for authentication (when ENABLE_AUTH=true)
+SESSION_SECRET=mkcert-web-ui-secret-key-change-in-production  # Session secret - CHANGE IN PRODUCTION!
+
 # Examples:
 # For development with HTTPS:
 # ENABLE_HTTPS=true
@@ -22,3 +28,9 @@ CERT_DIR=                     # Custom certificate storage directory (optional)
 # SSL_DOMAIN=your-domain.com
 # FORCE_HTTPS=true
 # NODE_ENV=production
+
+# For production with authentication:
+# ENABLE_AUTH=true
+# AUTH_USERNAME=your-username
+# AUTH_PASSWORD=your-secure-password
+# SESSION_SECRET=your-very-long-random-secret-key
