--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
   "author": "",
   "dependencies": {
     "archiver": "^7.0.1",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
     "express": "^4.19.2",
+    "express-session": "^1.17.3",
     "fs-extra": "^11.2.0"
   },
   "devDependencies": {
