dark and light mode!

--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,7 @@ FORCE_HTTPS=false             # Redirect HTTP to HTTPS (true/false)
 # Application Configuration
 NODE_ENV=development          # Environment mode (development/production)
 CERT_DIR=                     # Custom certificate storage directory (optional)
+DEFAULT_THEME=dark            # Default theme mode (dark/light)
 
 # Authentication Configuration
 ENABLE_AUTH=false             # Enable user authentication (true/false)
@@ -34,3 +35,7 @@ SESSION_SECRET=mkcert-web-ui-secret-key-change-in-production  # Session secret -
 # AUTH_USERNAME=your-username
 # AUTH_PASSWORD=your-secure-password
 # SESSION_SECRET=your-very-long-random-secret-key
+
+# Theme configuration:
+# DEFAULT_THEME=light  # Start with light mode by default
+# DEFAULT_THEME=dark   # Start with dark mode by default (default)
