initial openconnect testing

--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,14 @@ AUTH_USERNAME=admin           # Username for authentication (when ENABLE_AUTH=tr
 AUTH_PASSWORD=admin           # Password for authentication (when ENABLE_AUTH=true)
 SESSION_SECRET=mkcert-web-ui-secret-key-change-in-production  # Session secret - CHANGE IN PRODUCTION!
 
+# OpenID Connect (OIDC) SSO Authentication Configuration
+ENABLE_OIDC=false             # Enable OIDC SSO authentication alongside basic auth (true/false)
+OIDC_ISSUER=                  # OIDC provider issuer URL (e.g., https://login.microsoftonline.com/tenant-id/v2.0)
+OIDC_CLIENT_ID=               # OIDC client application ID
+OIDC_CLIENT_SECRET=           # OIDC client secret
+OIDC_CALLBACK_URL=http://localhost:3000/auth/oidc/callback  # OIDC callback URL
+OIDC_SCOPE=openid profile email  # OIDC scopes to request
+
 # Examples:
 # For development with HTTPS:
 # ENABLE_HTTPS=true
@@ -35,6 +43,25 @@ SESSION_SECRET=mkcert-web-ui-secret-key-change-in-production  # Session secret -
 # AUTH_USERNAME=your-username
 # AUTH_PASSWORD=your-secure-password
 # SESSION_SECRET=your-very-long-random-secret-key
+
+# For OIDC SSO authentication (Azure AD example):
+# ENABLE_OIDC=true
+# OIDC_ISSUER=https://login.microsoftonline.com/your-tenant-id/v2.0
+# OIDC_CLIENT_ID=your-azure-app-id
+# OIDC_CLIENT_SECRET=your-azure-app-secret
+# OIDC_CALLBACK_URL=https://your-domain.com/auth/oidc/callback
+
+# For OIDC SSO authentication (Google example):
+# ENABLE_OIDC=true
+# OIDC_ISSUER=https://accounts.google.com
+# OIDC_CLIENT_ID=your-google-client-id.apps.googleusercontent.com
+# OIDC_CLIENT_SECRET=your-google-client-secret
+
+# For OIDC SSO authentication (Okta example):
+# ENABLE_OIDC=true
+# OIDC_ISSUER=https://your-domain.okta.com/oauth2/default
+# OIDC_CLIENT_ID=your-okta-client-id
+# OIDC_CLIENT_SECRET=your-okta-client-secret
 
 # Theme configuration:
 # DEFAULT_THEME=light  # Start with light mode by default
