add rate limiting protection

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # Authentication test configuration
-ENABLE_AUTH=true
+ENABLE_AUTH=false
 AUTH_USERNAME=admin
 AUTH_PASSWORD=admin
 SESSION_SECRET=test-secret-key-for-development
