--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,12 @@ NODE_ENV=development          # Environment mode (development/production)
 CERT_DIR=                     # Custom certificate storage directory (optional)
 DEFAULT_THEME=dark            # Default theme mode (dark/light)
 
+# Rate Limiting Configuration
+CLI_RATE_LIMIT_WINDOW=900000  # CLI rate limit window in ms (default: 15 minutes)
+CLI_RATE_LIMIT_MAX=10         # Max CLI operations per window (default: 10)
+API_RATE_LIMIT_WINDOW=900000  # API rate limit window in ms (default: 15 minutes)
+API_RATE_LIMIT_MAX=100        # Max API requests per window (default: 100)
+
 # Authentication Configuration
 ENABLE_AUTH=false             # Enable user authentication (true/false)
 AUTH_USERNAME=admin           # Username for authentication (when ENABLE_AUTH=true)
