--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "express-rate-limit": "^7.4.0",
     "express-session": "^1.17.3",
     "fs-extra": "^11.2.0",
+    "multer": "^2.0.2",
     "passport": "^0.7.0",
     "passport-openidconnect": "^0.1.2"
   },
