--- a/.env.example
+++ b/.env.example
@@ -72,3 +72,56 @@ OIDC_SCOPE=openid profile email  # OIDC scopes to request
 # Theme configuration:
 # DEFAULT_THEME=light  # Start with light mode by default
 # DEFAULT_THEME=dark   # Start with dark mode by default (default)
+
+# Email Notification Configuration
+EMAIL_NOTIFICATIONS_ENABLED=false  # Enable email notifications for certificate expiry (true/false)
+SMTP_HOST=                         # SMTP server hostname (e.g., smtp.gmail.com, smtp.outlook.com)
+SMTP_PORT=587                      # SMTP server port (587 for TLS, 465 for SSL, 25 for unencrypted)
+SMTP_SECURE=false                  # Use SSL connection (true for port 465, false for others)
+SMTP_USER=                         # SMTP username/email address
+SMTP_PASSWORD=                     # SMTP password or app-specific password
+SMTP_TLS_REJECT_UNAUTHORIZED=true  # Reject unauthorized TLS connections (true/false)
+EMAIL_FROM=mkcert-web-ui@localhost # From email address for notifications
+EMAIL_TO=                          # Comma-separated list of recipient email addresses
+EMAIL_SUBJECT=Certificate Expiry Alert - mkcert Web UI  # Subject line for expiry alerts
+
+# Certificate Monitoring Configuration
+CERT_MONITORING_ENABLED=false      # Enable automatic certificate monitoring (true/false)
+CERT_CHECK_INTERVAL=0 8 * * *      # Cron expression for check frequency (default: daily at 8 AM)
+CERT_WARNING_DAYS=30               # Days before expiry to send warning notifications
+CERT_CRITICAL_DAYS=7               # Days before expiry to send critical notifications
+CERT_MONITOR_UPLOADED=true         # Monitor uploaded certificates in addition to generated ones (true/false)
+
+# Examples for Email Configuration:
+
+# Gmail example:
+# EMAIL_NOTIFICATIONS_ENABLED=true
+# SMTP_HOST=smtp.gmail.com
+# SMTP_PORT=587
+# SMTP_SECURE=false
+# SMTP_USER=your-email@gmail.com
+# SMTP_PASSWORD=your-app-password
+# EMAIL_FROM=your-email@gmail.com
+# EMAIL_TO=admin@company.com,ops@company.com
+
+# Outlook/Hotmail example:
+# SMTP_HOST=smtp-mail.outlook.com
+# SMTP_PORT=587
+# SMTP_SECURE=false
+# SMTP_USER=your-email@outlook.com
+# SMTP_PASSWORD=your-password
+
+# Corporate Exchange example:
+# SMTP_HOST=mail.company.com
+# SMTP_PORT=587
+# SMTP_SECURE=false
+# SMTP_USER=your-username
+# SMTP_PASSWORD=your-password
+
+# Monitoring examples:
+# CERT_MONITORING_ENABLED=true
+# CERT_CHECK_INTERVAL=0 8 * * *     # Daily at 8 AM
+# CERT_CHECK_INTERVAL=0 */6 * * *   # Every 6 hours
+# CERT_CHECK_INTERVAL=0 8 * * 1     # Every Monday at 8 AM
+# CERT_WARNING_DAYS=30              # Warn 30 days before expiry
+# CERT_CRITICAL_DAYS=7              # Critical alert 7 days before expiry
