--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "express-session": "^1.17.3",
     "fs-extra": "^11.2.0",
     "multer": "^2.0.2",
+    "node-cron": "^4.2.1",
+    "nodemailer": "^7.0.5",
     "passport": "^0.7.0",
     "passport-openidconnect": "^0.1.2"
   },
